--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.4.13",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "eslint": "^7.32.0",
@@ -26,12 +27,16 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.27.0",
+    "add": "^2.0.6",
+    "aws-sdk": "^2.973.0",
     "class-validator": "^0.13.1",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.1",
     "mongoose": "^5.13.7",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.2"
   }
 }
