--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,9 +12,9 @@
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
-    },  
+    },
     "plugins": [
         "@typescript-eslint"
     ],
-    "rules": {},
+    "rules": {}
 }
