--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "add": "^2.0.6",
     "aws-sdk": "^2.973.0",
     "class-validator": "^0.13.1",
+    "cognito-express": "^2.0.19",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.1",
