--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.27.0",
     "add": "^2.0.6",
+    "apollo-server": "^3.3.0",
     "aws-sdk": "^2.973.0",
     "class-validator": "^0.13.1",
     "cognito-express": "^2.0.19",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.1",
+    "graphql-ws": "^5.5.0",
     "mongoose": "^5.13.7",
     "reflect-metadata": "^0.1.13",
+    "subscriptions-transport-ws": "^0.9.19",
     "type-graphql": "^1.1.1",
     "uuid": "^8.3.2"
   }
